fix: body overflow hidden lorsque  menu mobile visible

--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,9 @@ body {
     background-color: #F7FBFF;
     font-family: 'Inter', sans-serif;
 }
-
+body.hidden {
+    overflow: hidden;
+}
 a {
     text-decoration: none;
     padding: 15px 25px;
